<resources>
    <string name="app_name">Chaty</string>
    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="welcome_to_chaty">Welcome to Chaty!</string>
    <string name="username">Username</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="password_length">Password too short</string>
    <string name="logout">Logout</string>
    <string name="chats">Chats</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message...</string>
</resources>